--- a/2022/trabalho_final/src/main/resources/application.properties
+++ b/2022/trabalho_final/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.url=jdbc:mysql://school-database:3306/school?reWriteBatchedInserts=true
-spring.datasource.url=jdbc:mysql://remotemysql.com:3306/XCm2L7Hrx5
-spring.datasource.username=XCm2L7Hrx5
-spring.datasource.password=RivCXwfh3z
+spring.datasource.url=jdbc:mysql://remotemysql.com
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 server.error.include-message=always
 
